--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.8"
 services:
   token-api:
+    environment:
+      - HTTP_PORT=8080
+      - RPC_URL=https://eth-mainnet.alchemyapi.io/v2/
     build:
       context: .
       dockerfile: docker/dockerfile.token-api
