complete the config file

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,8 @@ BASE_URL="0.0.0.0" # Base url for the server
 PORT=":8080" # Port to run the server on
 ETH_RPC_URL="https://eth-mainnet.alchemyapi.io/v2/" # Alchemy API url
 ETH_RPC_KEY="" # Alchemy API key
+REDIS_SEARCH_URL="0.0.0.0:6379" # Redis search url
+REDIS_KEY_PREFIX="tokens" # Prefix for redis keys and redis search index
+ADDRESSES_FILE="data/addresses.jsonl" # File containing addresses to fetch
+NUM_WORKERS=3 # Number of loader workers to fetch data, 3 is recommended since more than 3 will trigger rate limiting
+REFETCH_DELAY_HOURS=24 # Checks the addresses jsonl file every 24 hours for new addresses, wont re-fetch existing addresses, won't refetch if set to zero
